<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f5f8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/info_string_1"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:text="@string/info_string_2"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/info_string_3"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/info_string_4"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/info_string_5"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/info_string_6"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/info_string_7"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_16ssp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>